# MCTier

./: .clippy.toml  .gitignore  .prettierignore  .prettierrc.json  .rustfmt.toml  0  LICENSE  README.md  README_EN.md  buildout.txt  eslint.config.js  index.html  latest.json  package-lock.json  package.json  vite.config.ts  用户通知-紧急修复.txt  紧急修复说明-v1.4.5-hotfix.md
.husky/: pre-commit
MCTier-Android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
MCTier-Android/app/: build.gradle.kts
MCTier-Android/scripts/: build-easytier-jni.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  build_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: app_core.rs  chat_service.rs  config_manager.rs  easytier_advanced_commands.rs  error.rs  file_transfer.rs  hosts_manager.rs  lobby_manager.rs  mc_lan_bridge.rs  minecraft_agent.rs  minecraft_discovery.rs  minecraft_launcher.rs  mod.rs  network_service.rs  p2p_signaling.rs  remote_control.rs  resource_manager.rs  tauri_commands.rs  tauri_events.rs  voice_service.rs  websocket_signaling.rs
src/components/: index.ts
src/components/AboutWindow/: AboutWindow.css  AboutWindow.tsx
src/components/AdvancedNetworkConfig/: AdvancedNetworkConfig.css  AdvancedNetworkConfig.tsx
src/components/ChatRoom/: ChatRoom.css  ChatRoom.tsx
src/components/ClipboardReceiver/: ClipboardReceiver.tsx
src/components/ConnectionDiagnostic/: ConnectionDiagnosticModal.tsx
src/components/icons/: index.ts  (+34 more)
src/hooks/: index.ts  useEscapeKey.ts
src/i18n/: en.ts  index.ts  zh.ts
src/services/: index.ts
src/stores/: appStore.ts  devtools.ts  hooks.ts  index.ts  initialize.ts  persistence.ts  selectors.ts
src/types/: fileShare.ts  index.ts
(+150 files in other folders)
